Chore: fixes and refactor

--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "paper": "^0.10.3"
+    "material-ui": "^0.17.1",
+    "paper": "^0.10.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "roboto-fontface": "^0.7.0"
   }
 }
