--- a/package.json
+++ b/package.json
@@ -180,11 +180,12 @@
     "font-awesome": "^4.7.0",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.5.3",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.4.10"
