--- a/package.json
+++ b/package.json
@@ -182,9 +182,11 @@
     "react": "^15.4.2",
     "react-dom": "^15.5.3",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-jrate": "^0.1.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-star-rating-component": "^1.2.4",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
